syntax = "proto3";

option java_package = "com.felania.msldb";

package msggamedata;


import "MsgUid.proto";
import "MsgUserLevel.proto";
import "MsgMonster.proto";
import "MsgMonsterType.proto";
import "MsgMonsterLevel.proto";
import "MsgMonsterSkill.proto";
import "MsgRandom.proto";
import "MsgSetting.proto";
import "MsgShopItem.proto";
import "MsgItem.proto";
import "MsgStage.proto";
import "MsgSubStage.proto";
import "MsgStageMonster.proto";
import "MsgStageMonsterGroup.proto";
import "MsgDungeonStage.proto";
import "MsgDungeonSubStage.proto";
import "MsgStatusEffect.proto";
import "MsgStartMonster.proto";
import "MsgRune.proto";
import "MsgSummon.proto";
import "MsgRuneSetting.proto";
import "MsgRuneRare.proto";
import "MsgRuneOptionalEffect.proto";
import "MsgRuneSetEffect.proto";
import "MsgMonsterBeyond.proto";
import "MsgDictItem.proto";
import "MsgGiftSender.proto";
import "MsgGiftTemplate.proto";
import "MsgQuest.proto";
import "MsgNPC.proto";
import "MsgNPCTalkSequence.proto";
import "MsgNPCTalkAuto.proto";
import "MsgUserProfileIcon.proto";
import "MsgMonsterEvolution.proto";
import "MsgHelp.proto";
import "MsgSubHelp.proto";
import "MsgJojeShopSlot.proto";
import "MsgMonsterAi.proto";
import "MsgBattleMasterScript.proto";
import "MsgArenaGrade.proto";
import "MsgArenaSubGrade.proto";
import "MsgMonsterEggCutScene.proto";
import "MsgLoadingTemplate.proto";
import "MsgLogTemplte.proto";
import "MsgSupportMonster.proto";
import "MsgCustomBtnSound.proto";
import "MsgArenaSeason.proto";
import "MsgChatLikeColor.proto";
import "MsgDailyBonusSeason.proto";
import "MsgDailyBonus.proto";
import "MsgInfiniteSeason.proto";
import "MsgInfiniteStage.proto";
import "MsgInfiniteSubStage.proto";
import "MsgMission.proto";
import "MsgLobbyReward.proto";
import "MsgCaptureDictItem.proto";
import "MsgCredit.proto";
import "MsgEnforcementValue.proto";
import "MsgReviveMonster.proto";
import "MsgPlatformAchievement.proto";
import "MsgPackageQuest.proto";
import "MsgCaptureKingSeason.proto";
import "MsgCaptureKingGrade.proto";
import "MsgClanEmblem.proto";
import "MsgClanSeason.proto";
import "MsgClanSeasonBattle.proto";
import "MsgClanRewardGrade.proto";
import "MsgClanRewardTier.proto";
import "MsgClanStage.proto";
import "MsgClanSubStage.proto";
import "MsgClanBattleReward.proto";
import "MsgDailyBonusReturnUserSequence.proto";
import "MsgContractorSeason.proto";
import "MsgGachaShopEventBanner.proto";
import "MsgBingoSeason.proto";
import "MsgBingoSeasonData.proto";
import "MsgBingoTimeData.proto";
import "MsgMonsterUpgradeSkill.proto";
import "MsgMonsterUpgradeSkillPrice.proto";
import "MsgClanAttendanceReward.proto";

message MsgGameData {
   uint32 version = 1;
   repeated MsgUid uids = 2;
   repeated MsgUserLevel user_levels = 3;
   repeated MsgMonster monsters = 4;
   repeated MsgMonsterType monster_types = 5;
   repeated MsgMonsterLevel monster_levels = 7;
   repeated MsgMonsterSkill monster_skills = 8;
   repeated MsgRandom randoms = 9;
   repeated MsgSetting settings = 10;
   repeated MsgShopItem shop_items = 11;
   repeated MsgItem items = 12;
   repeated MsgStage stages = 13;
   repeated MsgSubStage substages = 14;
   repeated MsgStageMonster stage_monsters = 15;
   repeated MsgStageMonsterGroup stage_monster_groups = 16;
   repeated MsgDungeonStage dungeon_stages = 17;
   repeated MsgDungeonSubStage dungeon_substages = 18;
   repeated MsgStageMonster dungeon_monsters = 19;
   repeated MsgStageMonsterGroup dungeon_monster_groups = 20;
   repeated MsgStatusEffect status_effects = 21;
   repeated MsgStartMonster start_monsters = 22;
   repeated MsgRune runes = 23;
   repeated MsgSummon summons = 24;
   repeated MsgRuneSetting rune_settings = 25;
   repeated MsgRuneRare rune_rares = 26;
   repeated MsgRuneOptionalEffect rune_optional_effects = 27;
   repeated MsgRuneSetEffect rune_set_effects = 28;
   repeated MsgMonsterBeyond monster_beyond_pricing = 29;
   repeated MsgDictItem monster_dict = 30;
   repeated MsgGiftSender gift_sender = 31;
   repeated MsgGiftTemplate gift_template = 32;
   repeated MsgQuest quests = 33;
   repeated MsgNPC npcs = 34;
   repeated MsgNPCTalkSequence npc_talk_seqs = 35;
   repeated MsgNPCTalkAuto npc_auto_talks = 36;
   repeated MsgUserProfileIcon user_profile_icon = 37;
   repeated MsgMonsterEvolution monster_evolution_pricing = 38;
   repeated MsgHelp helps = 39;
   repeated MsgSubHelp subhelps = 40;
   repeated MsgJojeShopSlot joje_shop_slots = 41;
   repeated MsgMonsterAi monster_ais = 42;
   repeated MsgBattleMasterScript battle_master_script = 43;
   repeated MsgArenaGrade arena_grade = 44;
   repeated MsgArenaSubGrade arena_sub_grade = 45;
   repeated MsgMonsterEggCutScene monster_egg_cutscenes = 46;
   repeated MsgLoadingTemplate loading_template = 47;
   repeated MsgLogTemplte log_template = 48;
   repeated MsgSupportMonster support_monsters = 50;
   repeated MsgCustomBtnSound custom_btn_sounds = 51;
   repeated MsgArenaSeason arena_seasons = 52;
   repeated uint32 arena_attacker_gain_winning_point = 53;
   repeated uint32 arena_defender_gain_winning_point = 54;
   repeated MsgChatLikeColor chat_like_color = 55;
   repeated MsgDailyBonusSeason daily_bonus_seasons = 56;
   repeated MsgDailyBonus daily_bonuses = 57;
   repeated MsgInfiniteSeason infinite_seasons = 58;
   repeated MsgInfiniteStage infinite_stages = 59;
   repeated MsgInfiniteSubStage infinite_substages = 60;
   repeated MsgStageMonster infinite_monsters = 61;
   repeated MsgStageMonsterGroup infinite_monster_groups = 62;
   repeated MsgMission missions = 63;
   repeated MsgLobbyReward lobby_rewards = 64;
   repeated MsgCaptureDictItem monster_capture_dicts = 65;
   repeated MsgCredit credit = 66;
   repeated MsgEnforcementValue enforcement_values = 67;
   repeated MsgReviveMonster revive_monsters = 68;
   repeated MsgPlatformAchievement platform_achievements = 69;
   repeated MsgPackageQuest packages = 70;
   repeated MsgCaptureKingSeason captureking_seasons = 71;
   repeated MsgCaptureKingGrade captureking_grades = 72;
   repeated MsgClanEmblem clan_emblems = 73;
   repeated MsgClanSeason clan_seasons = 74;
   repeated MsgClanSeasonBattle clan_season_battles = 75;
   repeated MsgClanRewardGrade clan_grades = 76;
   repeated MsgClanRewardTier clan_reward_tiers = 77;
   repeated MsgClanStage clan_stages = 78;
   repeated MsgClanSubStage clan_substages = 79;
   repeated MsgClanBattleReward clan_battle_rewards = 80;
   repeated MsgDailyBonusReturnUserSequence daily_bonus_returnuser_sequences = 81;
   repeated MsgContractorSeason contractor_seasons = 82;
   repeated MsgGachaShopEventBanner gacha_shop_event_banners = 83;
   repeated MsgReviveMonster special_revive_monsters = 84;
   repeated MsgBingoSeason bingo_seasons = 90;
   repeated MsgBingoSeasonData bingo_season_datas = 91;
   repeated MsgBingoTimeData bingo_time_datas = 92;
   repeated MsgMonsterUpgradeSkill monster_upgrade_skills = 93;
   repeated MsgMonsterUpgradeSkillPrice monster_upgrade_skill_pricing = 94;
   repeated MsgClanAttendanceReward clan_attendance_rewards = 95;
}
